# HAnSKELLsen

./: Capability.hi  Capability.hs  FixedPoint.hi  FixedPoint.hs  HAnSKELLsen.cabal  LegalOntology.hi  LegalOntology.hs  Logic.hi  Logic.hs  Makefile  NormativeGenerators.hi  NormativeGenerators.hs  Patrimony.hi  Patrimony.hs  Quantale.hi  Quantale.hs  README.md  derivation.dot  legal_ir_minimal.json  legal_ir_normative_complete.json  logic  logic.hi  logic.hs
.cursor/plans/: dsl-quantale-tropical-roadmap_9456939e.plan.md  quantale_implementation_afc9808b.plan.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: hanskellsen-0.1.0.0-inplace.conf  package.cache
docs/: DSL_grammar.md  audit_infrastructure.md  car_sale_delivery_investigation.md  computational_layer_design.md  derivation_graph_roadmap.md  design_boundary.md  institutional_facts.md  institutional_semantics.md  legal_examples.md  quantale_interpretation.md  renewable_energy_benchmark.md
lawlib/: README.md
lawlib/contracts/: car_sale.dsl  generic_indemnity.dsl  private_lease_refinement.dsl  project_financing.dsl  project_insurance.dsl  residential_lease.dsl  sale_institution.dsl  simple_loan.dsl  solar_farm_lease.dsl
lawlib/fixtures/invalid/: import_cycle_a.dsl  import_cycle_b.dsl  import_missing.dsl  template_recursive.dsl
lawlib/instantiations/: car_sale_case.dsl  composed_lease_regime.dsl  insurance_financing_case.dsl  permit_lease_case.dsl  renewable_energy_case.dsl  tax_sale_case.dsl  templated_residential_lease.dsl
lawlib/shared/: base_lease_shared.dsl  base_sale_shared.dsl  commercial_shared.dsl  renewable_project_shared.dsl
lawlib/statutes/: biodiversity_regulation.dsl  environmental_permit.dsl  generic_tax.dsl  lease_framework_import.dsl  professional_license.dsl  renewable_energy_leasing.dsl  renewable_tax_credit.dsl  sale_institution.dsl  sales.dsl
src/Compiler/: AST.hs  Compiler.hs  IRToDSL.hs  Imports.hs  Parser.hs  Scenario.hs  SymbolTable.hs  Templates.hs
src/Pretty/: PrettyNorm.hs  PrettyReport.hs  PrettyTrace.hs
src/Runtime/: Audit.hs  AuditJson.hs  DerivationGraph.hs  Intrinsics.hs  Provenance.hs  QuantaleAnalysis.hs  RuleExecution.hs
test/: Main.hs  TestBenchmark.hs  TestIRToDSL.hs  TestImportMetadata.hs  TestInstitutionalSemantics.hs  TestIntrinsics.hs  TestInvariants.hs
test/fixtures/: intrinsic_tests.dsl
vocabulary/: objects.dsl  verbs.dsl
