cabal-version:      2.4
name:               hanskellsen
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      . src
  exposed-modules:
      Capability
    , FixedPoint
    , LegalOntology
    , Logic
    , NormativeGenerators
    , Patrimony
    , Quantale
    , Compiler.AST
    , Compiler.SymbolTable
    , Compiler.Parser
    , Compiler.Imports
    , Compiler.Compiler
    , Compiler.Templates
    , Compiler.Scenario
    , Pretty.PrettyNorm
    , Pretty.PrettyTrace
    , Pretty.PrettyReport
    , Runtime.Intrinsics
    , Runtime.Provenance
    , Runtime.RuleExecution
    , Runtime.Audit
  build-depends:
      base >=4.14 && <5
    , containers
    , directory
    , filepath
    , megaparsec
    , time
  default-language:    Haskell2010

executable hanskellsen-app
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base >=4.14 && <5
    , containers
    , directory
    , filepath
    , megaparsec
    , time
    , hanskellsen
  default-language:    Haskell2010

test-suite hanskellsen-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
      TestBenchmark
    , TestImportMetadata
    , TestInstitutionalSemantics
    , TestInvariants
  build-depends:
      base >=4.14 && <5
    , containers
    , directory
    , filepath
    , megaparsec
    , time
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , hanskellsen
  default-language:    Haskell2010
